Update design. WIP.
	* Pipeline/FPGA/Execute.v (module Execute): Add state as inputs
	and outputs. Simplify state transition.
	* Pipeline/FPGA/Fetch.v (module Fetch): Add fetch_done to show state.
	* Pipeline/FPGA/Makefile: Updated for new source files.
	* Pipeline/FPGA/Memory.v (module Memory): Renable instruction write.
	* Pipeline/FPGA/MyStorm.v (module MyStorm): Document state machine.
	* Pipeline/FPGA/aap.h: Just two sates now.

--- a/Pipeline/FPGA/Makefile
+++ b/Pipeline/FPGA/Makefile
@@ -15,10 +15,11 @@
 
 PCF = aap.pcf
 
-SRC = Memory.v            \
-      MyStorm.v           \
-      Execute.v           \
-      RegisterFile.v
+SRC = MyStorm.v       \
+      Memory.v        \
+      RegisterFile.v  \
+      Fetch.v         \
+      Execute.v
 
 HDR = aap.h
 
